src/assets/css/main.css
@import "@atlas-design-system/core/dist/styles/partials/global.css";
@import "@atlas-design-system/core/dist/styles/partials/typography.css";
@import "@atlas-design-system/core/dist/styles/partials/flexboxgrid.css";
@import "@atlas-design-system/tokens/dist/tokens.css";
@import "@atlas-design-system/core/dist/styles/partials/fonts.css";

@import "@atlas-design-system/core/dist/styles/partials/buttons.css";
@import "@atlas-design-system/core/dist/styles/partials/button-group.css";

@import "@atlas-design-system/core/dist/styles/partials/header.css";
@import "@atlas-design-system/core/dist/styles/partials/footer.css";

@import "@atlas-design-system/core/dist/styles/partials/form-control.css";
@import "@atlas-design-system/core/dist/styles/partials/form.css";
@import "@atlas-design-system/core/dist/styles/partials/input.css";

@import "@atlas-design-system/core/dist/styles/partials/link.css";
@import "@atlas-design-system/core/dist/styles/partials/link-group.css";

@import "@atlas-design-system/core/dist/styles/partials/card.css";
@import "@atlas-design-system/core/dist/styles/partials/card-list.css";

@import "@atlas-design-system/core/dist/styles/partials/icon-card.css";
@import "@atlas-design-system/core/dist/styles/partials/icons.css";

@import "@atlas-design-system/core/dist/styles/partials/lozenge.css";

/* HEADER */

/* .header-arrow-down-icon {
  padding-top: var(--spaceS);
  padding-right: var(--spaceS);
} */

/* PAGES */

.page {
  width: 90vw;
  margin: 0 auto;
}

.page {
  min-height: calc(100vh - (6rem + 4rem));
}

.bg-sand {
  background-color: var(--primaryB100);
}

/* LOGIN FORM/PAGE */

.login-logo {
  padding-bottom: var(--spaceXXL);
}

.login-header {
  padding-bottom: var(--spaceS);
}

.login-text {
  padding-bottom: var(--spaceXL);
}

.login-input {
  padding-top: var(--spaceL);
}

.login-button {
  justify-content: center;
  padding: var(--spaceXL) 0;
}

/* HOME PAGE */

.home-hero {
  background-color: var(--primaryB200);
}

.home-page {
  height: auto;
  width: 100%;
  max-width: var(--screenWidthL);
  min-width: var(--screenWidthL);
  margin: 0 auto;
}

.home-hero-section-left {
  padding-top: var(--spaceXXL);
}

.home-hero-header {
  padding-bottom: var(--spaceM);
  padding-right: var(--spaceS);
}

.home-hero-text {
  margin: var(--spaceL) 0;
}

.home-hero-button {
  padding-top: var(--spaceXL);
}

.featured-journals-header {
  padding: var(--spaceXXL) 0;
}

.featured-journals-card-text {
  padding: var(--spaceM) 0;
}

.featured-journals-card-space {
  margin-right: var(--spaceL);
}

/* ASSIGNMENTS PAGE */

.assignments-page-header {
  padding-top: var(--spaceXXL);
  padding-bottom: var(--spaceL);
}

.assignments-page-introduction {
  padding-bottom: var(--spaceXL);
}

.assignment-row {
  padding-left: var(--spaceM);
}

.assignments-card {
  margin-bottom: var(--spaceXL);
}

.assignments-card-button {
  margin-right: var(--spaceM);
}

.assignments-card-text {
  padding: var(--spaceM) 0;
}

/* SINGLE ASSIGNMENT PAGE */

.assignment-page {
  height: auto;
  width: 75%;
  max-width: var(--screenWidthXL);
  min-width: var(--screenWidthXL);
  margin: 0 auto;
}

.back-to-assignments-button {
  padding-top: var(--spaceXXL);
  padding-bottom: var(--spaceXL);
}

/* .single-assignment-page {
  justify-content: center;
} */

.assignment-description-container {
  padding-top: var(--spaceXL);
  padding-bottom: var(--spaceXXL);
}

.assignment-description {
  display: grid;
  grid-template-columns: auto 1fr;
  column-gap: 1rem;
  align-items: center;
  margin-top: var(--spaceM);
  padding-left: 4rem;
}

.assignment-button {
  padding-left: 4rem;
}

.assignment-image {
  height: auto;
  width: 100%;
  max-width: var(--screenWidthXS);
  min-width: var(--screenWidthXS);
  margin: 0 var(--spaceL);
}

